# Economic-Crime-Monitoring-Lab

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml
docs/: architecture.md
scripts/: clean_outputs.sh  run_dashboard.sh  run_pipeline.py
src/econ_crime_monitoring_lab/: __init__.py  alerts.py  config.py  dashboard.py  data_gen.py  db.py  features.py  mi_report.py  model.py  quality.py  rules.py
tests/: test_data_gen.py  test_db_schema_evolution.py  test_model.py  test_pipeline.py  test_quality.py  test_rules.py
